# for display continuity sake please use 2 spaces instead of tabs

2014-07-17 mmichaud <m.michael.michaud@orange.fr>
  * graph-toolbox and csv-driver have been updated in PLUS distribution

2014-07-15  mmichaud <m.michael.michaud@orange.fr>
  * Display date/times with a default 24h format, instead of 12h

2014-07-14  mmichaud <m.michael.michaud@orange.fr>
  * Add an option in SaveToPostGIS driver and WritableDataStoreDataSource
    framework to write normalized lower case column names (see FR #206)

2014-07-09  mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #372 can't write a table with an old gid if "Create a primary
    key column" is unchecked

2014-07-01 mmichaud <m.michael.michaud@orange.fr>
  * Improve copy/paste style behaviour while copying from/to
    ReferencedImageLayer
  * Fix bug #371 on WritablePostgisDataStoreDataSource : null schema
  * AttributeTable sorting is now Locale sensitive for String attributes

2014-06-14 mmichaud <m.michael.michaud@orange.fr>
  * Fix a bug in PostGISDataStoreDataSource thanks to Francisco avalos
    (tables in non public schema could not be read)

2014-06-08 mmichaud <m.michael.michaud@orange.fr>
  * Add "display vertex" in ColorThemingPanel (vertexStyleEnabled attribute)

2014-05-29 mmichaud <m.michael.michaud@orange.fr>
  * Add lineWidth option to ColorThemingPanel


* release 1.7.1 ***************************************************************

2014-05-18 ede
  * Fix nasty OSX bug preventing users to open files


* release 1.7.0 ***************************************************************

2014-05-08 mmichaud <m.michael.michaud@orange.fr>
  * Improve Buffer plugin according to FR 204
    (separate left/right sigle sided buffer)
  * Improve extract segments plugin. It can now make the most basic
    operation (extract each segment of each feature) and keep attributes.
  * Fix #364 AutoAssignAttribute : make it possible to set a date

2014-05-07 mmichaud <m.michael.michaud@orange.fr>